# retail-reconciliation-agent

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
config/: settings.yaml
data/runtime/: .gitkeep
data/samples/: orders_sample.csv  orders_sample.xlsx  settlements_sample.csv  settlements_sample.xlsx
deploy/: azure-container-app.md
docs/: PLAN.md  PRD.md  architecture.md  excel_schema.md  resilience.md  telemetry.md
scripts/: generate_sample_data.py
src/reconcile/: __init__.py  __main__.py  app.py  cli.py  config.py  db.py  logging_setup.py
src/reconcile/agent/: __init__.py  graph.py  llm.py  nodes.py  planner.py  prompts.py  schemas.py  service.py  state.py  verifier.py
src/reconcile/api/: __init__.py  metrics.py  middleware.py  progress.py  routes.py  run_registry.py
src/reconcile/api/static/: style.css
src/reconcile/api/templates/: base.html  error.html  progress.html  results.html  upload.html
src/reconcile/audit/: __init__.py  idempotency.py  repository.py
src/reconcile/incidents/: __init__.py  models.py  service.py  severity.py  store.py
src/reconcile/models/: __init__.py  db_models.py  domain.py
src/reconcile/notifications/: __init__.py  base.py  circuit_breaker.py  factory.py  mock_notifier.py  resend_notifier.py  retry.py  service.py  smtp_notifier.py
src/reconcile/parsers/: __init__.py  base.py  orders.py  settlements.py
src/reconcile/reconciliation/: __init__.py  matcher.py  obligations.py  rules.py  sla.py
tests/: __init__.py  conftest.py  factories.py
tests/e2e/: __init__.py  test_demo_flow.py
tests/integration/: __init__.py  test_agent_graph.py  test_api.py
tests/unit/: __init__.py  test_audit_repository.py  test_circuit_breaker.py  test_config.py  test_db.py  test_factory.py  test_idempotency.py  test_incidents.py  test_llm.py  test_logging.py  test_matcher.py  test_notifiers.py  test_obligations.py  test_parsers.py  test_planner.py  test_rules.py  test_sla.py  test_smoke.py  test_verifier.py
