[project]
name = "retail-reconciliation-agent"
version = "0.1.0"
description = "Agentic retail payment reconciliation system: reconciles orders against settlements, plans actions with an LLM, and notifies stakeholders by email."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ReconcileFlow" }]
keywords = ["reconciliation", "agent", "langgraph", "fintech", "payments"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
]

dependencies = [
    # Web + CLI
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.4",
    "typer>=0.15,<1.0",
    # Agent + LLM
    "langgraph>=0.2.60,<0.3",
    "langchain-core>=0.3.30,<0.4",
    "langchain-groq>=0.2.3,<0.4",
    # Data models + config
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "pyyaml>=6.0.2",
    # Persistence
    "sqlalchemy>=2.0.36,<3.0",
    # Spreadsheets
    "pandas>=2.2,<3.0",
    "openpyxl>=3.1.5",
    # Notifications
    "resend>=2.5,<3.0",
    # Resilience + logging
    "tenacity>=9.0,<10.0",
    "pybreaker>=1.2,<2.0",
    "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<7.0",
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "ruff>=0.8.4,<1.0",
    "types-PyYAML>=6.0.12",
    "pandas-stubs>=2.2",
    "pre-commit>=4.0,<5.0",
]

[project.scripts]
reconcile = "reconcile.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/retail-reconciliation-agent"
Issues = "https://github.com/your-org/retail-reconciliation-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reconcile"]

# --------------------------------------------------------------------------- #
# uv
# --------------------------------------------------------------------------- #
[tool.uv]
# Dev dependencies are declared via the [project.optional-dependencies] `dev`
# extra so they are installable with `uv sync --extra dev` and `pip install -e .[dev]`.
default-groups = []

# --------------------------------------------------------------------------- #
# Ruff — linter + formatter
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["data", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by the formatter
    "B008",  # function calls in argument defaults (FastAPI/Typer Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["reconcile"]

[tool.ruff.format]
docstring-code-format = true

# --------------------------------------------------------------------------- #
# mypy — strict static typing
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]
exclude = ["^data/", "^build/", "^dist/"]

[[tool.mypy.overrides]]
# Third-party libraries that ship without complete type stubs.
module = ["pybreaker.*", "resend.*", "langgraph.*", "langchain_groq.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests spanning multiple components",
    "e2e: end-to-end tests exercising the whole pipeline",
]
filterwarnings = [
    # A pending-deprecation notice emitted by langgraph on import; not our code.
    "ignore::PendingDeprecationWarning",
]

# --------------------------------------------------------------------------- #
# Coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
branch = true
source = ["reconcile"]
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
